--- a/README
+++ b/README
@@ -1,8 +1,10 @@
 ***/ Colores \****
-
-#f1f1f1 (blanco)
-#212737 (azul oscuro)
-#0cbbfc (azul claro)
+#f6f6f6 (blanco)
+#116bb8 (azul oscuro)
+#10abc7 (azul claro)
+#ea5d16 (naranja)
+#be1816 (rojo)
+#f9c114 (amarillo)
 
 ***/ Colores \****
 
